::first-letter not updated when ::before pseudo-element is dynamically added https://bugs.webkit.org/show_bug.cgi?id=47815 rdar://problem/96908042

Reviewed by NOBODY (OOPS!).

When a ::before pseudo-element is dynamically added to an element inside a
block with ::first-letter styling, the first-letter wrapper is not
invalidated. The ::before renderer gets inserted after the anonymous
first-letter wrapper in the render tree (because the wrapper occupies the
first-child slot), so firstLetterAndContainer() still finds the old
first-letter text and takes the "already styled" early return path.

Additionally, createRenderers() resolved ::first-letter style from the
immediate parent of the target text, which fails when the text is inside a
::before pseudo-element (since ::before doesn't have ::first-letter cached).

This patch:
- Detects stale first-letter renderers by checking if a ::before renderer
  appears as a next-sibling of the first-letter wrapper or its ancestors.
- Destroys the stale first-letter wrapper and reconstitutes its split text
  fragments before re-finding the actual first letter candidate.
- Passes the defining block to createRenderers() so ::first-letter style is
  resolved from the correct ancestor rather than the text's immediate parent.

* LayoutTests/fast/css/first-letter-removed-added-expected.txt:
* LayoutTests/fast/css/first-letter-removed-added.html:
* Source/WebCore/rendering/RenderBlock.cpp:
* Source/WebCore/rendering/updating/RenderTreeBuilderFirstLetter.cpp:
(WebCore::RenderTreeBuilder::FirstLetter::updateAfterDescendants):
(WebCore::RenderTreeBuilder::FirstLetter::isStaleFirstLetterRenderer):
(WebCore::RenderTreeBuilder::FirstLetter::destroyStaleFirstLetter):
(WebCore::RenderTreeBuilder::FirstLetter::destroyStaleFirstLetterInBlock):
(WebCore::RenderTreeBuilder::FirstLetter::createRenderers):
* Source/WebCore/rendering/updating/RenderTreeBuilderFirstLetter.h: